# pyqt5_fluent_ui

./: .gitignore  CMakeLists.txt  README.md  conanfile.py  pyproject.toml.in
sip/PyQtFluentWindow/: PyQtFluentWindow.sip  PyQtFluentWindowmod.sip
src/: fluent.qrc  fluent_window.cpp  fluent_window.h  fluent_window.ui  light_style.qss  main.cpp
src/icons/: Readme.md
test/: python_test.py
